-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
25295 1043 b compiler.valhalla.valuetypes.TestIntrinsics::test18_verifier (23 bytes)
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/type.hpp:1707
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhallaL/open/src/hotspot/share/opto/type.hpp:1707), pid=6915, tid=6926
# assert(_base >= OopPtr && _base <= AryPtr) failed: Not a Java pointer
#
# JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-adhoc.tobias.open)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-adhoc.tobias.open, compiled mode, compressed oops, g1 gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /oracle/valhallaL/open/JTwork/scratch/core.6915)
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /oracle/valhallaL/open/JTwork/scratch/hs_err_pid6915.log
#
# Compiler replay data is saved as:
# /oracle/valhallaL/open/JTwork/scratch/replay_pid6915.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/type.hpp:1707
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhallaL/open/src/hotspot/share/opto/type.hpp:1707), pid=6915, tid=6926
# assert(_base >= OopPtr && _base <= AryPtr) failed: Not a Java pointer
#
# JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-adhoc.tobias.open)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-adhoc.tobias.open, compiled mode, compressed oops, g1 gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /oracle/valhallaL/open/JTwork/scratch/core.6915)
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /oracle/valhallaL/open/JTwork/scratch/hs_err_pid6915.log
#
# Compiler replay data is saved as:
# /oracle/valhallaL/open/JTwork/scratch/replay_pid6915.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#