8206110: [lworld] TestIntrinsics fails with 'Not a Java pointer' with -Xcomp